[tool.poetry]
name = "filename associator"
version = "0.1.0"
description = ""
authors = ["Yuya Nagai <ynny.opem@gmail.com>"]

packages = [
    { include="filename_associator", from="." },
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
PySimpleGUI = "^4.35.0"
docopt = "^0.6.2"
openpyxl = "^3.0.7"
xlwt = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
autopep8 = "^1.5.5"

[tool.poetry.scripts]
filename-associator = "filename_associator.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
